# GRiD

./: .buildinfo  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  cliff.toml  code_of_conduct.html  contributing.html  env.yaml  examples.html  genindex.html  getting_started.html  index.html  modules.html  notes.md  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.py
GRiD/: README.md  count_reads.py  mosdepth.py  mosdepth_roi.py  pipeline_batch.py  pipeline_single.py  subset_cram.py
_sources/: getting_started.rst.txt  ibs_ibd.rst.txt  index.rst.txt  modules.rst.txt  paper.rst.txt  paper_sphinx.md.txt
algorithms/: hi_inference.html  neighbors.html  normalization.html
assets/: GRiD_logo.R
dev/: algorithms.html  contributing.html  examples.html  getting_started.html  ibs_ibd.html  objects.inv  paper.html  paper_sphinx.html  py-modindex.html  readme.html  search.html  searchindex.js
docs/: environment.yml  requirements.txt
eagle_output_files/: eagle_cleaned_plink.sbatch  eagle_cleaned_plink_lpa_gene.sbatch
examples/: 1000G_example.html  1000G_example.sh  ARIC_JHS_MESA.sh  IBS_example.html  IBS_example.sh  SOL.py  SOL.sh  SOL_V1.sh  SOL_python.html  SOL_sbatch.html
files/: diploid_calls.txt  hardcoded_positions.txt
grid/: README.md  __init__.py  cli.py  config.py  config.yaml  example_config.yaml  pipeline.py
ilash/: config.txt  text_config.txt
logo/: hexsticker.R
modules_dir/: compute-dipcn.html  count-reads.html  crai.html  estimate-kiv.html  extract-reference.html  find-neighbors.html  grid_core.html  helper-functions.html  hi-inference.html  lpa-realign.html  mosdepth.html  normalize-mosdepth.html  subset.html  utilities_overview.html  utils.html
paper/: AuthorArranger_Example.xlsx
playground/: ibd_graph.ipynb  ibd_graph.py  ibd_graph.sbatch  vntr_lpa.sbatch
quality_control/: qc_check.sbatch
reference_panel/: sample_ref_panel.txt
test/: README.md  conftest.py  test_add.py  (+12 more)
(+248 files in other folders)
